feat: 修改样式，增加block插件配置

--- a/src/components/font/iconfont.css
+++ b/src/components/font/iconfont.css
@@ -14,6 +14,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-drag:before {
+  content: "\e648";
+}
+
+.icon-text:before {
+  content: "\e768";
+}
+
 .icon-diagram:before {
   content: "\ec09";
 }
