--- a/src/components/font/iconfont.css
+++ b/src/components/font/iconfont.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3482068 */
-  src: url('iconfont.woff2?t=1655980769284') format('woff2'),
-       url('iconfont.woff?t=1655980769284') format('woff'),
-       url('iconfont.ttf?t=1655980769284') format('truetype');
+  src: url('iconfont.woff2?t=1655980769284') format('woff2');
 }
 
 .iconfont {
